<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Evento</string>

	<!-- texto de label dos botões principais na navegação  -->
    <string name="btnConvidado"> Convidados </string>
    <string name="btnAcoes"> Eventos </string>
    <string name="btnAdmin"> Parâmetros </string>
    
    <string name="btnEvento"> Eventos </string>

    <string name="btnTipoEvento"> Tipo Evento </string>
    <string name="btnFuncoes"> Funções </string>
    
    <string name="menuConfig"> Menu de Configurações </string>
    <string name="lblNomeEmpresa"> Nome da Empresa </string>

	<string name="btnRecepcao"> Recepção </string>
	
	<string name="lblWebService"> URL Web Service </string>
	<string name="lblTitulo"> Titulo da Janela</string>
    
	<string name="divisor">________________________________________________</string>
	
    <!--  Fim dos recursos utilizados de forma básica nas telas  -->
    <!--  Recursos usados na gravação/edição dos registros de convidados -->
    <string name="btnGravar">Gravar</string>
    <string name="lblFuncao">Funcao </string>
    <string name="lblOrigem">Origem </string>
    <string name="lblTelefone">Telefone </string>
    <string name="lblMail">Email </string>
    <string name="lblNome">Nome </string>
    <string name="messageInsertSuccess">Registro inserido com sucesso! </string>
    <string name="messageInsertFail">Falha na inclusão de registro. </string>
    <string name="btnEditar"> Editar </string>	

    
    <!--  recursos usados nos evento -->
    <string name="lblEvento"> Nome do Evento </string>
    <string name="lblLocal"> Local </string>
    <string name="lblResponsavel"> Responsável </string>
    <string name="lblDataInicial"> Data Inicio </string>
    <string name="lblDataFinal"> Data Fim </string>
    <string name="lblStatus"> Status </string>
    <string name="TipoEvento"> Tipo do Evento </string>
    <string name="btnAssociar"> Associar Convidados</string>
    <string name="lblNomeEvento"> Nome do Evento </string>
    
    <string-array 
        name="listaStatus">
        <item n="1"> Aberto  </item>
        <item n="2"> Fechado </item>
    </string-array>
    
	<!-- Recursos para cadastro das funções -->
	
	
	<!-- Recursos para cadastro das tipos de evento -->
	<string name="lblTipoEvento"> Tipo do Evento </string>
	
	<string name="txtParam"> Parâmetros </string>
	<string name="txtCadastroEvento"> Cadastro Evento</string>
	<string name="btnConfirmar"> Confirmar</string>
	<string name="txtCadastroFuncao"> Cadastro Função</string>
	<string name="txtCadastroTipoEvento"> Tipo Evento</string>
	<string name="lblDatIniFim"> Inicio-Fim</string>
	<string name="msgOK">Cadastro Efetuado</string>
	<string name="msgError">Erro de Cadastro</string>
</resources>