<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@android:color/darker_gray"
    android:paddingLeft="10dp">

    <include
        android:layout_width="match_parent"
        layout="@layout/comandos" />
    
	<TableLayout
		android:layout_width="match_parent"
        android:layout_height="wrap_content" >
	
            <TextView
                android:id="@+id/txtNomeEvento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="30dp"
                android:text="@string/lblNome" />

            <TextView
                android:id="@+id/txtLocal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:text="@string/lblLocal"/>

            <TextView
                android:id="@+id/txtResponsavel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:text="@string/lblResponsavel" />

            <TextView
                android:id="@+id/editOrigem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:text="@string/lblOrigem" />

            <TextView
                android:id="@+id/editFuncao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:text="@string/lblFuncao" />

      <TableRow
          android:id="@+id/tableRow1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" >
		    <Button
				android:id="@+id/btnAssociar"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/btnAssociar"
				android:layout_gravity="center"/>
	</TableRow>
    </TableLayout>

    <Button
		android:id="@+id/btnEditar"
		android:layout_width="100dp"
		android:layout_height="wrap_content"
		android:text="@string/btnEditar"
		android:layout_gravity="right"/>


</LinearLayout>