<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@android:color/darker_gray">

	<include layout="@layout/comandos"/>
	
    <TextView
        android:id="@+id/btnTipoEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnTipoEvento"
        android:clickable="true"
        android:textSize="40dp"
        android:layout_gravity="bottom"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/divisor"
        android:textColor="@android:color/white" />
	

    <TextView
        android:id="@+id/btnFuncoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnFuncoes"
        android:clickable="true"
        android:textSize="40dp"
        android:layout_gravity="bottom"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/divisor"
        android:textColor="@android:color/white" />
    	</LinearLayout>